<resources>
    <string name="nc_yes">Yes</string>
    <string name="nc_no">No</string>
    <string name="nc_common_and">and</string>
    <string name="nc_common_skip">Skip</string>
    <string name="nc_common_set">Set</string>
    <string name="nc_common_dismiss">Dismiss</string>
    <string name="nc_common_error_sorry">Sorry, something went wrong!</string>
    <string name="nc_common_create">Create</string>
    <string name="nc_common_unknown">Unknown</string>
    <string name="nc_common_disabled">Disabled</string>
    <string name="nc_common_copy">Copy</string>
    <string name="nc_common_copy_success">Copied to clipboard</string>
    <string name="nc_common_more_options">More options</string>
    <string name="nc_settings">Settings</string>
    <string name="add_participants">Add</string>
    <string name="nc_settings_image_compression">Image compression</string>
    <string name="nc_settings_image_compression_summary">Compress images before upload to reduce file size</string>
    <string name="nc_settings_image_compression_level">Compression level</string>
    <string name="nc_settings_image_compression_level_summary">Choose the level of compression for uploaded images</string>
    <string name="nc_image_compression_none">None</string>
    <string name="nc_image_compression_none_description">Upload original images without compression</string>
    <string name="nc_image_compression_light">Light</string>
    <string name="nc_image_compression_light_description">High quality with moderate size reduction (max 1920x1920, 95% quality)</string>
    <string name="nc_image_compression_medium">Medium</string>
    <string name="nc_image_compression_medium_description">Good balance between quality and size (max 1600x1600, 90% quality)</string>
    <string name="nc_image_compression_strong">Strong</string>
    <string name="nc_image_compression_strong_description">Noticeable size reduction for quick sharing (max 1280x1280, 80% quality)</string>
    <string name="nc_settings_video_compression">Video compression</string>
    <string name="nc_settings_video_compression_summary">Compress videos before upload to reduce file size</string>
    <string name="nc_settings_video_compression_level">Compression level</string>
    <string name="nc_settings_video_compression_level_summary">Choose the level of compression for uploaded videos</string>
    <string name="nc_video_compression_none">None</string>
    <string name="nc_video_compression_none_description">Upload original videos without compression</string>
    <string name="nc_video_compression_light">Light</string>
    <string name="nc_video_compression_light_description">High quality HD video with moderate size reduction (720p, 2000 kbps)</string>
    <string name="nc_video_compression_medium">Medium</string>
    <string name="nc_video_compression_medium_description">Good balance between quality and size (480p, 1000 kbps)</string>
    <string name="nc_video_compression_strong">Strong</string>
    <string name="nc_video_compression_strong_description">Maximum size reduction for quick sharing (360p, 500 kbps)</string>
    <string name="nc_video_compression_progress_title">Video wird komprimiert</string>
    <string name="nc_video_compression_starting">Starte Komprimierung von %1$s</string>
    <string name="nc_video_compression_frames">Frame %1$d von %2$d</string>
    <string name="nc_video_compression_size">Größe: %1$s von %2$s</string>
    <string name="nc_video_compression_final_size">Von %1$s auf %2$s komprimiert (%3$d%% kleiner)</string>
    <string name="nc_video_compression_time_remaining">Verbleibende Zeit: %1$s</string>
    <string name="nc_video_compression_completed">Komprimierung abgeschlossen!</string>
    <string name="nc_video_compression_completed_time">Video erfolgreich komprimiert</string>
    <string name="nc_video_compression_failed">Komprimierung fehlgeschlagen: %1$s</string>
    <string name="nc_video_compression_failed_time">Bitte versuchen Sie es erneut</string>
    <string name="nc_video_compression_notification_title">Video wird komprimiert</string>
    <string name="nc_video_compression_notification_starting">Starte Komprimierung von %1$s</string>
    <string name="nc_video_compression_notification_progress">Komprimiere %1$s (%2$d%%)</string>
    <string name="nc_video_compression_notification_completed">Video komprimiert</string>
    <string name="nc_video_compression_notification_completed_text">%1$s erfolgreich auf %2$s komprimiert (%3$d%% kleiner)</string>
    <string name="nc_video_compression_notification_failed">Komprimierung fehlgeschlagen</string>
    <string name="nc_video_compression_notification_failed_text">Komprimierung von %1$s fehlgeschlagen</string>
    <string name="nc_server_connect">Test server connection</string>
    <string name="nc_server_helper_text">The link to your %1$s web interface when you open it in the browser.</string>
    <string name="nc_server_testing_connection">Testing connection</string>
    <string name="nc_server_unsupported">Server does not have supported Talk app installed</string>
    <string name="nc_server_url">Server address https://…</string>
    <string name="nc_server_not_installed">Please finish your %1$s installation</string>
    <string name="nc_server_db_upgrade_needed">Please upgrade your %1$s database</string>
    <string name="nc_server_maintenance">Please bring your %1$s out of maintenance</string>
    <string name="nc_server_version">%1$s only works with %2$s 13 and up</string>
    <string name="nc_server_import_account_plain">Import account</string>
    <string name="nc_server_import_accounts_plain">Import accounts</string>
    <string name="nc_server_import_account">Import account from the %1$s app</string>
    <string name="nc_server_import_accounts">Import accounts from the %1$s app</string>
    <string name="nc_server_failed_to_import_account">Failed to import selected account</string>
    <string name="nc_Server_account_imported">Selected account is now imported and available</string>
    <string name="nc_get_from_provider">Do you not have a server yet?\nClick here to get one from a provider</string>
    <string name="nc_push_disabled">Push notifications disabled</string>
    <string name="nc_capabilities_failed">Failed to fetch capabilities, aborting</string>
    <string name="nc_external_server_failed">Failed to fetch signaling settings</string>
    <string name="nc_display_name_not_fetched">Display name couldn\'t be fetched, aborting</string>
    <string name="nc_nextcloud_talk_app_not_installed">%1$s not available (not installed or restricted by admin)</string>
    <string name="nc_display_name_not_stored">Could not store display name, aborting</string>
    <string name="nc_push_notification_error"> Sorry something went wrong, error is %1$s</string>
    <string name="nc_push_notification_fetch_error">Sorry something went wrong, cannot fetch test push message</string>
    <string name="nc_search">Search</string>
    <string name="nc_search_clear">Clear search</string>
    <string name="nc_certificate_dialog_title">Check out the certificate</string>
    <string name="nc_certificate_dialog_text">Do you trust the until now unknown SSL certificate, issued by %1$s for %2$s, valid from %3$s to %4$s?</string>
    <string name="nc_certificate_error">Your SSL setup prevented connection</string>
    <string name="nc_settings_advanced_title">Advanced</string>
    <string name="nc_settings_proxy_type_key" translatable="false">proxy_type</string>
    <string name="nc_settings_proxy_type_title">Proxy type</string>
    <string name="nc_settings_proxy_host_key" translatable="false">proxy_host</string>
    <string name="nc_settings_proxy_host_title">Proxy host</string>
    <string name="nc_settings_proxy_port_key" translatable="false">proxy_port</string>
    <string name="nc_settings_proxy_port_title">Proxy port</string>
    <string name="nc_settings_proxy_username_title">Proxy username</string>
    <string name="nc_settings_proxy_username_key" translatable="false">proxy_username</string>
    <string name="nc_settings_proxy_password_title">Proxy password</string>
    <string name="nc_settings_proxy_password_key" translatable="false">proxy_password</string>
    <string name="nc_settings_use_credentials_title">Proxy requires credentials</string>
    <string name="nc_settings_use_credentials_key" translatable="false">proxy_credentials</string>
    <string name="nc_settings_reauthorize">Reauthorize account</string>
    <string name="nc_client_cert_setup">Set up client certificate</string>
    <string name="nc_client_cert_change">Change client certificate</string>
    <string name="nc_settings_remove">Remove</string>
    <string name="nc_settings_remove_confirmation">Please confirm your intent to remove the current account.</string>
    <string name="nc_settings_remove_account">Remove account</string>
    <string name="nc_settings_server_eol_title">Unsupported server</string>
    <string name="nc_settings_server_eol">The server version is too old and not supported by this version of the Android app</string>
    <string name="nc_settings_server_almost_eol">The server version is very old and will not be supported in the next release!</string>
    <string name="nc_settings_warning">Warning</string>
    <string name="nc_settings_wrong_account">Only current account can be reauthorized</string>
    <string name="nc_settings_no_talk_installed">Talk app is not installed on the server you tried to authenticate against</string>
    <string name="nc_settings_account_updated">Your already existing account was updated, instead of adding a new one</string>
    <string name="nc_account_scheduled_for_deletion">The account is scheduled for deletion, and cannot be changed</string>
    <string name="nc_settings_notification_sounds_post_oreo">Notifications</string>
    <string name="nc_settings_call_ringtone">Calls</string>
    <string name="nc_settings_call_ringtone_key" translatable="false">call_ringtone</string>
    <string name="nc_settings_other_notifications_ringtone">Messages</string>
    <string name="nc_settings_message_ringtone_key" translatable="false">message_ringtone</string>
    <string name="nc_settings_default_ringtone" translatable="false">Librem by feandesign</string>
    <string name="nc_settings_no_ringtone">No sound</string>
    <string name="nc_settings_server_notification_app_not_installed_title">Server notifications app not installed</string>
    <string name="nc_settings_contact_admin_of">Please contact the administrator of</string>
    <string name="nc_settings_appearance">Appearance</string>
    <string name="nc_settings_smartwatch_mode_title">Smartwatch mode</string>
    <string name="nc_settings_smartwatch_mode_desc">Enable font scaling for better readability on small screens</string>
    <string name="nc_settings_smartwatch_audio_output_title">Smartwatch audio output</string>
    <string name="nc_settings_smartwatch_audio_output_speaker">Speaker</string>
    <string name="nc_settings_smartwatch_audio_output_earpiece">Earpiece</string>
    <string name="audio_volume_control_title">Call volume</string>
    <string name="nc_settings_font_scale_title">Font size</string>
    <string name="nc_settings_font_scale_normal">Normal</string>
    <string name="nc_settings_font_scale_medium">Medium</string>
    <string name="nc_settings_font_scale_large">Large</string>
    <string name="nc_settings_font_scale_very_large">Very large</string>
    <string name="nc_settings_theme_title">Theme</string>
    <string name="nc_settings_theme_key">theme</string>
    <string name="nc_settings_theme_battery_saver_key" translatable="false">battery_saver</string>
    <string name="audio_output_bluetooth">Bluetooth</string>
    <string name="audio_output_speaker">Speaker</string>
    <string name="audio_output_phone">Phone</string>
    <string name="audio_output_dialog_headline">Audio output</string>
    <string name="audio_output_wired_headset">Wired headset</string>
</resources>